DW-3354 add client correlation id (#61)
* Update readme for local mac development. 
* Add API parameters
* Pass correlationId into the services and log as correlation_id to match other apps
* Code formatting as lots was wrong